[flake8]
max-line-length = 119
exclude = .git,*/migrations/*,*env*,*venv*,__pycache__,*staticfiles/*,*mediafiles/*,*/settings/*,*/admin.py,*/tests.py

[coverage:run]
source = .
omit =
    */factories.py
    */migrations/*
    */tests/*
    */venv/*
    */env/*
    */staticfiles/*
    */mediafiles/*
    */__pycache__/*
    */.get/*
    */.tox/*
    */.git/*/
    */.venv/*
    */.env/*
    */.vscode/*
    */.github/*
    */.pytest_cache/*
    */.mypy_cache/*
    *__init__.py*
    *manage.py*
    *wsgi.py*
    *asgi.py*
    *apps.py*
    *settings.py*
    *urls.py*
    *admin.py*
    */tests/*

[coverage:report]
show_missing = True


[options]
# ...
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src